Fixes for xsmall mobile views * Additional Fixes to prevent the dyanimc charts date pciker from overflowing its container * Form buttons changes to anchor tags * Fix-widths have been removed * Overview cards fill more of thier container height to accomodate long dates.

--- a/UI/src/app/cleaning/cleaning-log/cleaning-log.component.css
+++ b/UI/src/app/cleaning/cleaning-log/cleaning-log.component.css
@@ -1,4 +1,7 @@
 .table-width{
     width: 100%;
-    min-width: 340px;
+}
+
+th.column-spacing{
+    padding-right: .25rem
 }
